<resources>
    <string name="app_name">SmartQs</string>
    <string name="smart_qs_title">SmartQs</string>
    <string name="title_new_task">New Task</string>
    <string name="hint_task_definition">Task Definition</string>
    <string name="hint_for_date">For Date</string>
    <string name="hint_for_time">For Time</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create">Done</string>
    <string name="task_list_empty_dialog_msg">Hey! your Task list is empty today \n Do you like me to remind you any ?</string>
    <string name="plz_add_btn_dialog">Yep! \n Please Add</string>
    <string name="no_btn_dialog">No \n I\'m Relaxing!</string>
    <string name="have_ucompleted_the_task_msg_dialog">Have you completed the task ?</string>
    <string name="yep_dialog_btn">Yep</string>
    <string name="not_yet_dialog_btn">Not Yet</string>
    <string name="edit_task">Edit Task</string>
    <string name="please_fill">"Please fill"</string>
    <string name="task_priority_msg">" Task Priority "</string>
    <string name="task_desp_msg">Task Description</string>
    <string name="plz_fill_all_fields">Please fill all fields</string>

    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="backup_data">Backup data</string>
    <string name="import_data">Import data</string>
    <string name="backup_before_import">Do you want backup current database before import an old database?</string>
    <string name="select_file">Select file</string>
    <string name="backup_empty">Backup file is empty</string>
    <string name="dialog_alert">ALERT!</string>
    <string name="btn_ok">Ok</string>
    <string name="urgent_text">Urgent</string>
    <string name="not_urgent_text">Not Urgent</string>
    <string name="important_text">Important</string>
    <string name="not_important_text">Not Important</string>


    <string name="welcome_title">Welcome !</string>
    <string name="smart_qs_desc">SmartQs assists you to create, organize and manage your to-dos using a scientific method.</string>
    <string name="welcome_lets_go">Great, Let\'s go!</string>
    <string name="edit_dialog_edit">Edit</string>
    <string name="edit_dialog_delete">Delete</string>
    <string name="edit_dialog_done">Done</string>
    <string name="move_task_title">Move \"</string>
    <string name="move_task_title_to">"\" to "</string>
    <string name="txt_q3">Q3</string>
    <string name="txt_q4">Q4</string>
    <string name="txt_q1">Q1</string>
    <string name="txt_q2">Q2</string>
    <string name="toast_feature_day_tasks">"You are viewing tasks for "</string>
    <string name="overlay_sample">Sample Task</string>
    <string name="overlay_long_press_text"><b><i>Long press</i></b> to change quadrants.</string>
    <string name="overlay_double_tap_on_task"><b><i>Double tap</i></b> to edit.</string>
    <string name="choose_tasksdb_file">Choose tasksdb file</string>
    <string name="title_backup_tasks">Backup your Tasks</string>
    <string name="title_activity_success">Success</string>
    <string name="great_job">Great Job !</string>
    <string name="ok_btn">OK</string>
</resources>
