<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:context="com.thincovate.taskmanager.smartqs.activities.MainActivity">

        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/important_text"
                    android:textColor="@color/txt_gray"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/not_important_text"
                    android:textColor="@color/txt_gray"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.thincovate.taskmanager.smartqs.common.VerticalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="bottom|right"
                    android:text="@string/urgent_text"
                    android:textColor="@color/txt_gray"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/q1card"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:elevation="4dp">


                    <LinearLayout
                        android:id="@+id/first"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:duplicateParentState="true"
                        android:orientation="vertical">


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/urgentImpList"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".9" />


                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_margin="5dp"
                            android:layout_weight=".1"
                            android:gravity="bottom"
                            android:layout_gravity="center"
                            android:text="Q1"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/q2card"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:elevation="4dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical"

                        >


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/urgentNotImpList"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".9" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_margin="5dp"
                            android:layout_weight=".1"
                            android:gravity="bottom"
                            android:text="Q2"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.thincovate.taskmanager.smartqs.common.VerticalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="bottom|right"
                    android:text="@string/not_urgent_text"
                    android:textColor="@color/txt_gray"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/q3card"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:elevation="4dp">

                    <LinearLayout
                        android:id="@+id/third"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:clickable="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:duplicateParentState="true"
                            android:text="Q3"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/notUrgentImpList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="Q4"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:textStyle="bold|italic" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/notUrgentNoImpList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight=".1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgViewDatabase"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_backup" />


            <ImageView
                android:id="@+id/imgViewPreviousTasks"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/arrow_left_drop_circle" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_add_white_24dp" />

            <ImageView
                android:id="@+id/imgViewFeatureTasks"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/arrow_right_drop_circle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:gravity="center"
        android:layout_marginLeft="12dp"
        android:textColor="#000"
        android:layout_marginBottom="15dp"

        android:lines="2"
        android:text="d\n hf" />
</FrameLayout>